--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "js-base64": "^3.7.2",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
